# notify_me

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  configure.in  libnotify.c  notifmed.c  notifmed.rc
src/: Makefile.am  notifmed.c
src/lib/: files.c  files.h  processes.c  processes.h  strings.c  strings.h
